--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,4 +19,11 @@ data_transformation:
   data_path: artifacts/data_ingestion/winequality-red.csv
 
 
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_transformation/train.csv
+  test_data_path: artifacts/data_transformation/test.csv
+  model_name: model.joblib
+
+
 
